feat: 移除user update
